--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 Doyle's Blog
 ------------
 
-My blog, it is based on [Contenticious].
+My blog, it is based on Contenticious: http://memowe.github.io/contenticious/
 
-[Contenticious]: http://memowe.github.io/contenticious/
