--- a/README
+++ b/README
@@ -1,5 +1,2 @@
-Doyle's Blog
-------------
-
-My blog, it is based on Contenticious: http://memowe.github.io/contenticious/
+My old blog.  Content is still on doyleyoung.net, but is no longer added here.
 
